# ginhawa

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  schema.sql
cloud/: alembic.ini  pyproject.toml
cloud/alembic/: env.py
cloud/alembic/versions/: 20bbb05e1da1_drop_redundant_audit_triggers.py  a8c1e3d27f5a_extend_audit_log_actor_type_with_kiosk.py  b3f7a92c0d8e_add_updated_at_to_sessions_and_measurements.py  c62cbc71004c_initial_schema.py  f566915403f9_add_device_credentials_table.py
cloud/scripts/: dev_register_kiosk.py
cloud/src/ginhawa_cloud/: __init__.py
cloud/src/ginhawa_cloud/api/: __init__.py  _authz.py  audit_log.py  auth.py  citizens.py  device_credentials.py  measurements.py  schemas.py  sessions.py  sync_citizens.py  sync_measurements.py  sync_sessions.py  users.py
cloud/src/ginhawa_cloud/core/: config.py  security.py
cloud/src/ginhawa_cloud/db/: models.py  session.py
cloud/src/ginhawa_cloud/scripts/: seed_dev_data.py
cloud/src/ginhawa_cloud/services/: audit.py
cloud/tests/: conftest.py  test_cors.py  test_health.py
cloud/tests/api/: conftest.py  test_audit_log.py  test_auth.py  test_citizens.py  test_device_credentials.py  test_kiosk_auth.py  test_measurements.py  test_schemas.py  test_sessions.py  test_sync_citizens.py  test_sync_measurements.py  test_sync_sessions.py  test_users.py
cloud/tests/scripts/: test_seed_dev_data.py
cloud/tests/services/: test_audit.py
kiosk/: README.md  alembic.ini  fix.py  pyproject.toml
kiosk/alembic/: README  env.py
kiosk/alembic/versions/: 9a4b1c5d2e7f_initial_schema.py  c8a7e93d4f12_add_last_synced_at_watermark.py
kiosk/docs/: runbook.md
kiosk/docs/verification/: 2026-05-02-phase2-p1to5-integration.md  2026-05-02-phase2-p6-sensors-bench.md
kiosk/src/ginhawa_kiosk/: __init__.py  __main__.py
kiosk/src/ginhawa_kiosk/core/: __init__.py  config.py  logging.py  security.py
kiosk/src/ginhawa_kiosk/db/: __init__.py  base.py  models.py  session.py
kiosk/src/ginhawa_kiosk/fsm/: __init__.py  event_bus.py  session_fsm.py
kiosk/src/ginhawa_kiosk/gui/: __init__.py  main_window.py  strings.py  style_loader.py  theme.py
kiosk/src/ginhawa_kiosk/gui/resources/: styles.qss
kiosk/src/ginhawa_kiosk/gui/screens/: __init__.py  aborted.py  base.py  consent.py  end.py  (+10 more)
kiosk/src/ginhawa_kiosk/scripts/: __init__.py  bench_printer_full.py  continuous_capture.py  provision_db.py
kiosk/src/ginhawa_kiosk/sensors/: __init__.py  base.py  ble_lock.py  factory.py  mock.py  mqtt_sensors.py  omron_bp.py  rfid.py  xiaomi_scale.py
kiosk/src/ginhawa_kiosk/services/: __init__.py  audit.py  printer.py  validation.py
kiosk/src/ginhawa_kiosk/sync/: __init__.py  client.py  daemon.py  schemas.py
kiosk/tests/: test_main_sync_wiring.py  test_smoke.py
kiosk/tests/core/: test_config.py
kiosk/tests/db/: conftest.py  test_models.py  test_pragmas.py  test_session.py
kiosk/tests/fsm/: conftest.py  test_event_bus.py  test_session_fsm.py  test_session_fsm_branches.py  test_session_fsm_transitions.py
kiosk/tests/gui/: conftest.py  test_main_window.py  test_main_window_commits.py  test_main_window_path_filter.py  test_measuring_vitals_temperature.py  test_offline_sensor_handling.py  test_register_form.py  test_report_path_filter.py  test_screens.py  test_spo2_session_floor.py  test_theme_load.py
kiosk/tests/integration/: test_phase2_p1to5_integration.py  test_session_e2e.py
kiosk/tests/scripts/: test_continuous_capture.py
kiosk/tests/sensors/: conftest.py  test_ble_lock.py  test_mqtt_sensors.py  test_omron_bp.py  test_omron_bp_freshness.py  test_rfid.py  test_xiaomi_scale.py  test_xiaomi_scale_mac_filter.py
kiosk/tests/services/: conftest.py  test_audit.py  test_printer.py  test_printer_async.py  test_validation.py
kiosk/tests/sync/: conftest.py  test_client.py  test_daemon.py  test_resync_on_update.py
(+145 files in other folders)
