[project]
name = "ginhawa-cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "brianpaglii", email = "81464213+brianpaglii@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
ginhawa-cloud = "ginhawa_cloud:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
