[project]
name = "ginhawa-kiosk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "brianpaglii", email = "81464213+brianpaglii@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bleak>=3.0.1",
    "paho-mqtt>=2.1.0",
    "pyqt6>=6.11.0",
    "python-escpos>=3.1",
    "sqlcipher3-binary>=0.6.0",
    "structlog>=25.5.0",
]

[project.scripts]
ginhawa-kiosk = "ginhawa_kiosk:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
