[project]
name = "ginhawa-kiosk"
version = "0.1.0"
description = "GINHAWA kiosk application — offline-first health-monitoring kiosk for Philippine barangay health centers."
readme = "README.md"
authors = [
    { name = "brianpaglii", email = "81464213+brianpaglii@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bleak>=3.0.1",
    "bleak-retry-connector>=4.6.0",
    "home-assistant-bluetooth>=2.0.0",
    "httpx>=0.28.1",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.0",
    "pyqt6>=6.11.0",
    "python-escpos>=3.1",
    "sqlalchemy>=2.0",
    "sqlcipher3>=0.6.0",
    "structlog>=25.5.0",
    "transitions>=0.9.2",
    "xiaomi-ble>=1.3.0",
    # Pi-only deps for the MFRC522 RFID reader. Markers keep them out
    # of the dev-on-laptop install (RPi.GPIO has no x86_64 wheels and
    # fails to build off-Pi). On the Pi (aarch64), uv sync pulls them
    # in automatically.
    "mfrc522>=0.0.7 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "rpi-lgpio ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "spidev ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
]

[project.scripts]
ginhawa-kiosk = "ginhawa_kiosk:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/ginhawa_kiosk"]
branch = false

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/ginhawa_kiosk"]

# bleak / transitions / escpos / paho-mqtt / sqlcipher3 ship without
# usable type stubs; mypy --strict would flag every import as an
# error otherwise. These overrides are scoped to those library
# boundaries — kiosk-internal code stays under full strict mode.
[[tool.mypy.overrides]]
module = [
    "transitions.*",
    "escpos.*",
    "paho.*",
    "sqlcipher3.*",
    "mfrc522.*",
    "spidev.*",
    "RPi.*",
]
ignore_missing_imports = true
